--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
-    "@release-it/conventional-changelog": "^8.0.1",
     "@marsidev/react-turnstile": "^0.1.0",
     "@next/bundle-analyzer": "^13.4.19",
+    "@release-it/conventional-changelog": "^8.0.1",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
@@ -35,8 +35,10 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-select": "^5.7.0",
+    "react-slick": "^0.30.2",
     "release": "^6.3.1",
     "sharp": "^0.31.3",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.0.0",
     "tw-elements": "^1.0.0-beta2",
     "util": "^0.12.5",
