--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment-timezone": "^0.5.41",
     "next": "^13.1.1",
     "next-sitemap": "^3.1.45",
+    "nextjs-toploader": "^1.6.6",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
