chore: refactor .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,7 @@ yarn-error.log*
 /public/sitemap.xml
 /public/sitemap-0.xml
 
-/lib/preBuildScripts/static
+/lib/preBuildScripts/static/globalData.json
+/lib/preBuildScripts/static/currencyData.json
+
+/lib/preBuildScripts/static 
