--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 # NEXT_PUBLIC_MICROSITE_ID=1
 ANALYZE="false"
 RATE_LIMIT_KEY="9itzbGPOyjBiP0zcbX7v1BfQJ9gg2B"
+NEXT_PUBLIC_TEMPLATE=1
