--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nextjs-toploader": "^1.6.6",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-select": "^5.8.0",
