--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-select": "^5.8.0",
