--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "predev": "node lib/preBuildScripts/preBuildDev.js",
     "prebuild": "node lib/preBuildScripts/preBuildDev.js",
+    "postbuild": "next-sitemap",
     "build": "next build",
     "export": "next export",
     "start": "next start",
