--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
+    "@fancyapps/ui": "^5.0.36",
     "@marsidev/react-turnstile": "^0.1.0",
     "@next/bundle-analyzer": "^13.4.19",
     "@release-it/conventional-changelog": "^8.0.1",
