--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "predev": "node lib/preBuildScripts/preBuildDev.js",
+    "predev": "node lib/preBuildScripts/preBuildDev.js && node lib/services/headers.js",
     "prebuild": "node lib/preBuildScripts/preBuildDev.js",
     "postbuild": "next-sitemap",
     "build": "next build",
