chore: change app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Discovery Hospitality",
-  "short_name": "discovery_hospitality",
+  "short_name": "Discovery Hospitality",
   "theme_color": "#68192F",
   "background_color": "#68192F",
   "display": "standalone",
