--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Discovery Hospitality",
   "short_name": "Discovery Hospitality",
-  "theme_color": "#68192F",
-  "background_color": "#68192F",
+  "theme_color": "#691B33",
+  "background_color": "#691B33",
   "display": "standalone",
   "orientation": "any",
   "scope": "/",
