refactor: showLazy state on local

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ ANALYZE="false"
 RATE_LIMIT_KEY="9itzbGPOyjBiP0zcbX7v1BfQJ9gg2B"
 NEXT_PUBLIC_TEMPLATE=1
 NEXT_PUBLIC_CLOUDFRONT_URL="https://d3s2eyc2s4knf3.cloudfront.net"
+NEXT_PUBLIC_ENVIRONMENT="development"
